MySQL 연동 properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+# dev properties file
 
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql"//127.0.0.1:3306/devweb01
+jdbc.username=root
+jdbc.password=158pk158
