--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,6 @@ build/
 .sts4-cache
 bin/
 !**/src/main/**/bin/
-!**/src/main/resources/.properties
 !**/src/test/**/bin/
 
 ### IntelliJ IDEA ###
@@ -26,6 +25,7 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+application.properties
 
 ### NetBeans ###
 /nbproject/private/
