--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+#h2 console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
+#h2 db info
+spring.datasource.url=jdbc:h2:./calendo;
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=hope  
+spring.datasource.password=1234 
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+#hibernate
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.hibernate.ddl-auto=create-drop
